[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Acme-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Intro/IntroControl.gd" type="Script" id=2]
[ext_resource path="res://Intro/IntroDialogue.gd" type="Script" id=3]
[ext_resource path="res://Assets/Button Design.PNG" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[node name="Intro" type="Node2D"]

[node name="IntroDialogue" type="Node2D" parent="."]
position = Vector2( 496, 304 )
script = ExtResource( 3 )

[node name="IntroControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="IntroControl"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="TextBox" type="ColorRect" parent="IntroControl"]
margin_left = 56.0
margin_top = 416.0
margin_right = 952.0
margin_bottom = 560.0
color = Color( 1, 1, 1, 0.690196 )

[node name="RichTextLabel" type="RichTextLabel" parent="IntroControl/TextBox"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 24.0
margin_right = 880.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 136, 48 )

[node name="Tween" type="Tween" parent="IntroControl/TextBox"]

[node name="Label" type="Label" parent="IntroControl/TextBox"]
margin_left = 8.0
margin_top = -40.0
margin_right = 112.0
margin_bottom = -1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="Button" type="Button" parent="IntroControl"]
margin_left = 336.0
margin_top = 184.0
margin_right = 688.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Choice 1"

[connection signal="tween_completed" from="IntroControl/TextBox/Tween" to="IntroControl" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="IntroControl/Button" to="IntroControl" method="_on_Button_pressed"]
